<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Alt Chat</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear_search">Clear Search</string>
    <string name="link">Link</string>
    <string name="scan">Scan</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select">Select</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="def">Default</string>
    <string name="default_value">Default (%1$s)</string>
    <string name="custom">Custom</string>
    <string name="none">None</string>
    <string name="automatic">Automatic</string>
    <string name="strict">Strict</string>
    <string name="open">Open</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading…</string>
    <string name="open_attachment">Open Attachment</string>
    <string name="join">Join</string>
    <string name="join_group">Join Group</string>
    <string name="join_channel">Join Channel</string>
    <string name="rejoin">Rejoin</string>
    <string name="delete">Delete</string>
    <string name="delete_for_me">Delete for Me</string>
    <string name="delete_for_everyone">Delete for Everyone</string>
    <string name="info">Info</string>
    <string name="update">Update</string>
    <string name="emoji">Emoji</string>
    <string name="attachment">Attachment</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="close_window">Close Window</string>
    <string name="forward">Forward</string>
    <string name="create">Create</string>
    <string name="reset">Reset</string>
    <string name="later">Later</string>
    <string name="resend">Resend</string>
    <string name="edited">Edited</string>
    <string name="edit_message">Edit Message</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="mute">Mute</string>
    <string name="muted">Muted</string>
    <string name="ephemeral_messages">Disappearing Messages</string>
    <string name="ephemeral_messages_hint">Applies to all members of this chat; they can still copy, save, and forward messages.</string>
    <string name="save">Save</string>
    <string name="chat">Chat</string>
    <string name="media">Media</string>
    <string name="apps_and_media">Apps &amp; Media</string>
    <string name="profile">Profile</string>
    <string name="all_profiles">All Profiles</string>
    <string name="current_profile">Current Profile</string>
    <string name="main_menu">Main Menu</string>
    <string name="start_chat">Start Chat</string>
    <string name="show_full_message">Show Full Message…</string>
    <string name="mark_all_as_read">Mark All as Read</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="mark_as_read_short">Read</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="mark_as_unread_short">Unread</string>
    <string name="loading">Loading…</string>
    <string name="hide">Hide</string>
    <string name="activate">Activate</string>
    <string name="load_remote_content">Load Remote Images</string>
    <string name="load_remote_content_ask">Remote images can track you.\n\nThis setting also may load fonts and other content. If disabled, embedded or cached images may appear.\n\nLoad remote images?</string>
    <string name="always">Always</string>
    <string name="always_load_remote_images">Always Load Remote Images</string>
    <string name="once">Once</string>
    <string name="show_warning">Show Warning</string>
    <string name="not_now">Not now</string>
    <string name="never">Never</string>
    <string name="one_moment">One moment…</string>
    <string name="done">Done</string>
    <string name="undo">Undo</string>
    <string name="offline">Offline</string>
    <string name="next">Next</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="error_x">Error: %1$s</string>
    <string name="no_app_to_handle_data">Can\'t find an app to handle this type of data.</string>
    <string name="no_browser_installed">No browser installed.</string>
    <string name="file_not_found">Could not find %1$s.</string>
    <string name="cannot_save_file">Cannot save %1$s.</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="chats_headline">Chats</string>
    <string name="contacts_headline">Contacts</string>
    <string name="email_address">Email Address</string>
    <string name="bad_email_address">Bad email address.</string>
    <string name="password">Password</string>
    <string name="existing_password">Existing Password</string>
    <string name="now">Now</string>
    <string name="danger">Danger</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="last_week">Last week</string>
    <string name="last_month">Last month</string>
    <string name="last_seen_at">Last seen at %1$s</string>
    <string name="last_seen_relative">Last seen %1$s</string>
    <string name="last_seen_unknown">Last seen: Unknown</string>
    <plurals name="call_duration_minutes">
        <item quantity="one">%d minute duration</item>
        <item quantity="other">%d minutes duration</item>
    </plurals>
    <string name="call_duration_less_than_a_minute">Less than 1 minute</string>
    <plurals name="n_minutes">
        <item quantity="one">%d min</item>
        <item quantity="other">%d min</item>
    </plurals>
    <plurals name="n_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="n_chats">
        <item quantity="one">%d chat</item>
        <item quantity="other">%d chats</item>
    </plurals>
    <plurals name="n_contacts">
        <item quantity="one">%d contact</item>
        <item quantity="other">%d contacts</item>
    </plurals>
    <plurals name="n_messages">
        <item quantity="one">%d message</item>
        <item quantity="other">%d messages</item>
    </plurals>
    <plurals name="n_reactions">
        <item quantity="one">%d reaction</item>
        <item quantity="other">%d reactions</item>
    </plurals>
    <plurals name="n_members">
        <item quantity="one">%d member</item>
        <item quantity="other">%d members</item>
    </plurals>
    <plurals name="n_recipients">
        <item quantity="one">%d subscriber</item>
        <item quantity="other">%d subscribers</item>
    </plurals>
    <plurals name="n_selected">
        <item quantity="one">%d Selected</item>
        <item quantity="other">%d Selected</item>
    </plurals>
    <string name="selected_colon">Selected:</string>
    <string name="selected">Selected</string>
    <string name="self">Me</string>
    <string name="draft">Draft</string>
    <string name="image">Image</string>
    <string name="reply_noun">Reply</string>
    <string name="gif">GIF</string>
    <string name="sticker">Sticker</string>
    <string name="add_to_sticker_collection">Add to Sticker Collection</string>
    <string name="add_stickers_instructions">To add stickers, tap "Open Sticker Folder", create a subfolder for your sticker pack, and drag image and sticker files there</string>
    <string name="open_sticker_folder">Open Sticker Folder</string>
    <string name="ask_add_sticker_to_collection">Add this sticker to your collection?</string>
    <string name="ask_delete_sticker">Delete this sticker?</string>
    <string name="sticker_picker_empty_hint">Tap a sticker to add it here.</string>
    <string name="images">Images</string>
    <string name="audio">Audio</string>
    <string name="voice_message">Voice Message</string>
    <string name="forwarded">Forwarded</string>
    <string name="forwarded_message">Forwarded Message</string>
    <string name="forwarded_by">Forwarded by %1$s</string>
    <string name="video">Video</string>
    <string name="documents">Documents</string>
    <string name="contact">Contact</string>
    <string name="bot">Bot</string>
    <string name="camera">Camera</string>
    <string name="front_camera">Front camera</string>
    <string name="back_camera">Back camera</string>
    <string name="microphone">Microphone</string>
    <string name="capture">Capture</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="toggle_camera">Toggle Camera</string>
    <string name="toggle_fullscreen">Toggle Full Screen Mode</string>
    <string name="location">Location</string>
    <string name="locations">Locations</string>
    <string name="gallery">Gallery</string>
    <string name="images_and_videos">Images and Videos</string>
    <string name="file">File</string>
    <string name="files">Files</string>
    <string name="files_attach_hint">Send original files and uncompressed images</string>
    <string name="choose_from_files">Choose from Files</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="webxdc_app">App</string>
    <string name="webxdc_apps">Apps</string>
    <string name="menu_play">Play</string>
    <string name="pref_screen_security">Screen Security</string>
    <string name="pref_screen_security_explain">Request to block screenshots in the recents list and inside the app</string>
    <string name="pref_incognito_keyboard">Incognito Keyboard</string>
    <string name="pref_incognito_keyboard_explain">Request keyboard to disable personalized learning</string>
    <string name="alt_step1_title">Create your account</string>
    <string name="alt_step1_subtitle">Choose a username and enter the email address you want to use for notifications.</string>
    <string name="alt_step2_title">Set a recovery password</string>
    <string name="alt_step2_subtitle">This password encrypts your private key. You will need it to restore your account on another device.</string>
    <string name="alt_step3_title">Verify your email</string>
    <string name="alt_restore_step1_title">Restore your account</string>
    <string name="alt_restore_step1_subtitle">Enter your username and email to receive a verification code.</string>
    <string name="alt_restore_step3_title">Decrypt your key</string>
    <string name="alt_restore_step3_subtitle">Enter the verification code and the recovery password you set during registration.</string>
    <string name="alt_username_hint">Username (letters, digits, underscore)</string>
    <string name="alt_display_name_hint">Display name (optional)</string>
    <string name="alt_email_hint">Contact email</string>
    <string name="alt_password_hint">Recovery password</string>
    <string name="alt_password_confirm_hint">Confirm recovery password</string>
    <string name="alt_code_hint">Verification code</string>
    <string name="alt_register_button">Register</string>
    <string name="alt_verify_button">Verify</string>
    <string name="alt_resend_button">Resend code</string>
    <string name="alt_restore_button">Restore key</string>
    <string name="alt_passcode_title">Passcode Lock</string>
    <string name="alt_passcode_change">Change Passcode</string>
    <string name="alt_passcode_fingerprint">Unlock with Fingerprint</string>
    <string name="alt_passcode_autolock">Auto-lock</string>
    <string name="alt_passcode_autolock_summary">Require passcode if away for some time.</string>
    <string name="alt_passcode_task_switcher_header">App Content in Task Switcher</string>
    <string name="alt_passcode_show_content">Show Content</string>
    <string name="alt_passcode_show_content_summary">If disabled, chat content will be hidden in the task switcher but you won\'t be able to take screenshots in the app.</string>
</resources>